--- a/src/components/media-view-component/media-view.css
+++ b/src/components/media-view-component/media-view.css
@@ -1,4 +1,4 @@
-media-view {
+/* media-view {
   display: flex;
   width: 100%;
   height: 100%;
@@ -53,7 +53,6 @@ media-view > div.cover-pan img, media-view > div.cover-pan video {
   top: 50%;
   transform: translate(-50%, -50%);
 
-  /* animation: pan 5s infinite linear; */
   width: auto;
   height: auto;
 }
@@ -64,8 +63,22 @@ media-view > div.cover-pan.tall img, media-view > div.cover-pan.tall video {
 
 media-view > div.cover-pan.wide img, media-view > div.cover-pan.wide video {
   height: 100%;
+} */
+
+
+
+
+media-view, media-view > .container, media-view > .container > .panner, media-view > .container > .panner > .fitter {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
+media-view {
+  overflow: hidden;
+}
 
 media-view [slot] {
   display: none;
@@ -75,14 +88,39 @@ media-view > div.loading [slot="loading"], media-view > div.error [slot="error"]
   display: initial;
 }
 
-/* @keyframes pan {
+
+media-view > .container > .panner {
+  --pan-start-x: 0;
+  --pan-start-y: 0;
+  --pan-end-x: 0;
+  --pan-end-y: 0;
+  --pan-start-scale: 1;
+  --pan-end-scale: 1;
+  --pan-duration: 0s;
+  --pan-direction: normal;
+  --pan-iteration-count: 0;
+
+  animation-name: media-view-pan;
+  animation-duration: var(--pan-duration);
+  animation-direction: var(--pan-direction);
+  animation-iteration-count: var(--pan-iteration-count);
+  animation-timing-function: linear;
+
+  animation-play-state: paused;
+}
+
+media-view > .container > .panner.unpaused {
+  animation-play-state: running;
+}
+
+@keyframes media-view-pan {
   0% {
-    transform: translate(-50%, -80%);
+    transform: translate(var(--pan-start-x), var(--pan-start-y)) scale(var(--pan-start-scale));
   }
   100% {
-    transform: translate(-50%, -20%);
+    transform: translate(var(--pan-end-x), var(--pan-end-y)) scale(var(--pan-end-scale));
   }
-} */
+}
 
 
 
